// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`output transforms correctly using "output-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
        filename: 'bundle',
        path: 'dist/assets',
        pathinfo: true,
        publicPath: 'https://google.com',
        sourceMapFilename: '[name].map',
        sourcePrefix: '\\\\t',
        umdNamedDefine: true,
        strictModuleExceptionHandling: true
    }
}
"
`;

exports[`output transforms correctly using "output-1" data 1`] = `
"module.exports = {
	entry: 'index.js',
	output: {
		filename: 'app',
		path: 'distro/src',
		pathinfo: false,
		publicPath: 'https://google.com',
		sourceMapFilename: \\"'[name].map'\\",
		sourcePrefix: '\\\\t',
		umdNamedDefine: true,
		strictModuleExceptionHandling: true
	},
}
"
`;
